<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iMedia</string>
    <string name="action_settings">Settings</string>
    <string name="movie_button">Movies</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log In</string>
    <string name="user">User</string>
    <string name="_olvido_su_pass">Forgot your password?</string>
    <string name="remember">Remember me</string>
    <string name="password">Password</string>
    <string name="double_back">Click BACK again to exit</string>
    <string name="element_description">Element description</string>
    <string name="email">Email</string>
    <string name="email_failed">Unable to send email. Maybe you dont have any email application</string>
    <string name="repeat_password">Repeat password</string>
    <string name="accept_and_register">Accept and register</string>
    <string name="picture_of_element">Picture of the element</string>
    <string name="seen_pending">Seen/Pending</string>
    <string name="rating">Rating</string>
    <string name="category">Category</string>
    <string name="app_logo">App logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="term_to_search">Term to search</string>
    <string name="search">Search</string>
    <string name="music_category">Music</string>
    <string name="books_category">Books</string>
    <string name="movies_category">Movies</string>
    <string name="shows_category">Shows</string>
    <string name="title_activity_edit">Edit</string>
    <string name="name">Name</string>
    <string name="picture_path">Picture path</string>
    <string name="comments">Comments</string>
    <string name="description">Description</string>
    <string name="edit_and_send">Edit and send</string>
    <string name="datasent">Data Sent OK</string>
    <string name="datanotsent">The element already exists. Not updated</string>
    <string name="allTab">ALL</string>
    <string name="musicTab">MUSIC</string>
    <string name="moviesTab">MOVIES</string>
    <string name="showsTab">SHOWS</string>
    <string name="booksTab">BOOKS</string>
    <string name="userExists">The user or email already exists</string>
	<string name="passMismatch">The passwords are not the same</string>
	<string name="userPassError">The user-password combination is not right, please try again</string>
	<string name="delete_item">Delete Card</string>
	<string name="deleteTitle">Delete Element</string>
	<string name="deleteMessage">Are you sure that you want to delete the current element?</string>
	<string name="yes">Yep</string>
	<string name="no">Nope</string>
	<string name="userCreated">User Created</string>
	<string name="edit">Edit</string>
	<string name="about_help">About and Help</string>
	<string name="help">APPLICATION HELP: \n
	    How many times have you been at home with nothing to do? \n
	    You\'d like to read a book, but you don\'t know which one... Or maybe a movie or a TV show... \n
	    iMedia is a social application where you can search all kind of multimedia, see a summary of the media and people opinions. You can even rate a movie or show and give your own opinion. \n
	    And even more, if you want to add your own book, song or whatever you can create a new item for the app so everyoe can see ir and review it.\n \n 
		HOW TO USE IT:\n
		After registering as an app user, you have your library where every element you\'ve seen, rated, commented even if they are movies, books, music or TV shows. \n
		On the other hand, you can search for any item of the database, select it and see its card. \n
		Oh! And if you can\'t find what you\'re looking for, you can always add a new card whenever you want! \n</string>
	<string name="about_us">About Us</string>
	<string name="about_us_msg">IMedia v1.0 (beta)   \n date: 2013 \n Authors:\n\n - Enrique García Gutierrez\n - Sergio Ruiz Peña \n\n\n Thank you for using our app</string>
	<string name="found_bug">Found a bug?\nMail Us!</string>
	<string name="element_name">Element Name</string>
	<string name="element_category">Categ</string>
	
    
</resources>