<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollLogin"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo"
        android:contentDescription="@string/movie_button"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Main_Page" >

        <ImageView
            android:id="@+id/booksimg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/user"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/login"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/performSearch"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>