<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollIndex"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:fadingEdge="none"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:contentDescription="@string/movie_button"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        tools:context=".Main_Page" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/welcome"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/logout"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right|top"
                android:layout_weight="0"
                android:text="Logout" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/searchimg"
                        android:layout_width="150dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/search" />

                    <ImageView
                        android:id="@+id/editImg"
                        android:layout_width="150dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/edit" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/musicimg"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/music_category"
                        android:src="@drawable/music" />

                    <ImageView
                        android:id="@+id/moviesimg"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/movies_category"
                        android:src="@drawable/movies" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/picturePath"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/shows_category"
                        android:src="@drawable/shows" />

                    <ImageView
                        android:id="@+id/booksimg"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/books_category"
                        android:src="@drawable/books" />
                </TableRow>
            </TableLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/help_bugs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_weight="0" >

            <Button
                android:id="@+id/bug_mail"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/found_bug" />

            <Button
                android:id="@+id/helpButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_help" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>