<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightGrey"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <requestFocus />

        <TextView
            android:id="@+id/editPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_path"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/picturePath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:id="@+id/editComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/comentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/editDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.73"
            android:ems="10"
            android:inputType="textMultiLine" >
        </EditText>

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category" />

        <Spinner
            android:id="@+id/selectCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.05" />

        <Button
            android:id="@+id/modificar"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/edit_and_send" />
    </LinearLayout>

</ScrollView>