<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollSearch"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:fillViewport="true"
    android:fadingEdge="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:contentDescription="@string/movie_button"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        tools:context=".Main_Page" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <AutoCompleteTextView
                android:id="@+id/searchBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/term_to_search" >

                <requestFocus />
            </AutoCompleteTextView>

            <Button
                android:id="@+id/performSearch"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search" />
        </LinearLayout>

        <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/DarkGray" >

                    <ListView
                        android:id="@+id/tabAll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>

                    <ListView
                        android:id="@+id/tabMusic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>

                    <ListView
                        android:id="@+id/tabMovies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>

                    <ListView
                        android:id="@+id/tabShows"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>

                    <ListView
                        android:id="@+id/tabBooks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>

</ScrollView>